@@ -48,7 +48,12 @@ const struct usbdevfs_urb s_in3 = { 1, 129, -5, 0, "file2\0\0\0\0\0\0\0\0\0\0", 
 const struct usbdevfs_urb *out1 = &s_out1, *in1a = &s_in1a, *in1b = &s_in1b,
     *out2 = &s_out2, *in2a = &s_in2a, *in2b = &s_in2b, *in2c = &s_in2c, *in3 = &s_in3;
 
-const gchar test_tree_str[] = "USBDEVFS_CONNECTINFO 0 0B00000000000000\n"
+const gchar test_tree_str[] =
+#if __BYTE_ORDER == __LITTLE_ENDIAN
+    "USBDEVFS_CONNECTINFO 0 0B00000000000000\n"
+#else
+    "USBDEVFS_CONNECTINFO 0 0000000B00000000\n"
+#endif
     "USBDEVFS_REAPURB 0 1 2 0 0 4 4 0 77686174\n"
     " USBDEVFS_REAPURB 0 1 129 0 0 10 4 0 74686973\n"
     "  USBDEVFS_REAPURB 0 1 129 0 0 10 9 0 616E6474686174FFC0\n"
@@ -57,7 +62,11 @@ const gchar test_tree_str[] = "USBDEVFS_CONNECTINFO 0 0B00000000000000\n"
     "  USBDEVFS_REAPURB 0 1 129 0 0 15 7 0 66696C65316262\n"
     "   USBDEVFS_REAPURB 0 1 129 0 0 15 8 0 66696C6531636363\n"
     " USBDEVFS_REAPURB 0 1 129 -5 0 15 5 0 66696C6532\n"
+#if __BYTE_ORDER == __LITTLE_ENDIAN
     "USBDEVFS_CONNECTINFO 42 0C00000000000000\n";
+#else
+    "USBDEVFS_CONNECTINFO 42 0000000C00000000\n";
+#endif
 
 static ioctl_tree *
 get_test_tree(void)
@@ -476,8 +485,13 @@ t_evdev(void)
     memset(contents, 0, sizeof(contents));
     g_assert_cmpint(fread(contents, 1, sizeof(contents), f), >, 10);
     g_assert_cmpstr(contents, ==,
+#if __BYTE_ORDER == __LITTLE_ENDIAN
 		    "EVIOCGABS 0 640000003200000096000000020000000500000001000000\n"
 		    "EVIOCGABS(32) 8 1E000000000000006400000000000000090000000A000000\n"
+#else
+		    "EVIOCGABS 0 000000640000003200000096000000020000000500000001\n"
+		    "EVIOCGABS(32) 8 0000001E000000000000006400000000000000090000000A\n"
+#endif
 		    "EVIOCGBIT(0) 129 01020304\n"
 		    "EVIOCGBIT(1) 130 616161616161616161616161616161616161616161616161616161616161616161616161616161616161616161616161\n"
 		    "EVIOCGBIT(22) 131 00000000\n");
